# 3D-pose

./: .gitignore  LOG.md  README.md  README.txt  things.txt
client/src/: CMakeSettings.json
client/src/model/: AppController.cpp
client/src/model/calibration/: CalibrationType.h
client/src/model/camera/optitrack/: OptitrackCamera.h
client/src/model/capture/: Capture.cpp  Capture.h  CaptureType.h
client/src/model/scene/: SceneController.cpp
client/src/view/rendering/: Renderer2D.cpp
data/: app-config.json
data/test/: config.json
server/: 3D_pose_from_images.cpp
server/src/: .gitignore
src/: CMakeLists.txt  CMakeSettings.json  Main.cpp
src/backend/camera/: OptitrackCamera.cpp  OptitrackCamera.h
src/backend/scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/backend/scene/enum/: CaptureMode.h  SceneStatus.h
src/controller/: AppController.cpp  AppController.h
src/controller/calibration/: CalibrationController.cpp  CalibrationController.h
src/controller/camera/: CameraController.cpp  CameraController.h
src/controller/camera/optitrack/: OptitrackCamera.cpp  OptitrackCamera.h
src/controller/files/: FileController.cpp  FileController.h
src/controller/scene/: SceneController.cpp  SceneController.h
src/frontend/: Console.cpp  Console.h
src/model/: AppController.cpp  AppController.h  CMakeLists.txt
src/model/calibration/: CalibrationController.cpp  CalibrationController.h  CalibrationType.h  ExtrinsicCalibration.cpp  ExtrinsicCalibration.h  Extrinsics.cpp  Extrinsics.h  IntrinsicCalibration.cpp  IntrinsicCalibration.h  Intrinsics.cpp  Intrinsics.h
src/model/calibration/parameters/: Intrinsics.cpp
src/model/camera/: CameraController.cpp  CameraController.h  FramesPacket.cpp  FramesPacket.h  OptitrackCamera.cpp  OptitrackCamera.h  Packet.cpp  Packet.h
src/model/camera/capture/: Packet.cpp
src/model/camera/enum/: CaptureMode.h
src/model/camera/optitrack/: OptitrackCamera.cpp  OptitrackCamera.h
src/model/capture/: Capture.cpp  Capture.h  Result.cpp  Result.h
src/model/config/: ConfigController.cpp  ConfigController.h
src/model/enum/: CaptureType.h
src/model/openpose/: CMakeLists.txt
src/model/openpose/examples/user_code/: 3D_pose.cpp  CMakeLists.txt
src/model/operation/: Operation.h
src/model/scene/: Scene.cpp  Scene.h  SceneController.cpp  SceneController.h  SceneManager.cpp  SceneManager.h
src/model/scene/enum/: CalibrationMode.h  CaptureMode.h  Operation.h
src/model/util/: Config.cpp  Config.h
src/model/video/: Frame3D.cpp  Frame3D.h  Packet3D.cpp  Packet3D.h  Video3D.cpp  Video3D.h
src/view/: CameraRenderer.cpp  CameraRenderer.h  Console.cpp  Console.h
src/view/enum/: Input.h
src/view/rendering/: Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h
